# infinity-ping-pong

./: CMakeLists.txt  README.md  balls.sln
balls/: Ball.cpp  Ball.h  Bot.h  Player.h  balls.vcxproj  balls.vcxproj.filters  main.cpp  sfml template.cpp
src/: Ball.h  Platform.h  Player.h  main.cpp
